--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ionicons": "^4.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3"
